/*
 * $Id: ChangeLog,v 1.1480 2003/09/15 16:39:24 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-15 19:35 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/tests/newrdd.prg
    * change to work with new RDD
    + #define TESTED_RDD added
    ! fix to work on case sensitive file systems

2003-09-15 18:30 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbcmd.c
    * order of some function changed

  * xharbour/source/rdd/dbf1.c
    ! fix in scope borrowed from Harbour

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * minor correction

  * xharbour/source/rdd/dbffpt/dbffpt1.c
    ! fix bug introduce by casting
    * minor correction

  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
    * minor correction

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! last fixes from Harbour

2003-09-15 08:39 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/tget.prg
    + Added reset of ::Type in ::VarGet()

2003-09-15 00:26 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * hrbdll.bc
  * hrbdll.vc
    + source/rtl/strdel.c

2003-09-15 00:25 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! Minor bug in Setfocus.

2003-09-14 22:35 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/hbcrypt.c
    - local decl of Adler32()
    + #include "hbcompress.h"
  * source/rtl/hbchecksum.c
  * source/rtl/hbcrc32.c
    + #include "hbcompress.h"
  * tests/testzip.prg
    * allow to skip the floppy part of the test.
    * other minor changes.
  * contrib/hbzlib/ziparchive.cpp
    + #include "hbcompress.h"
  * contrib/hbzlib/include/hbz.h
    ! added closing } and #endifs
  * contrib/hbzlib/include/unzip.h
  * contrib/hbzlib/include/zip.h
    * move #include outside of _cplusplus block

2003-09-14 19:00 UTC-0300 Luiz Rafael Culik<culikr@uol.com.br>
  * tests/testzip.prg